fixed header text issue on ios7 and above.

--- a/src/main/java/com/googlecode/mgwt/ui/client/theme/ios7/css/header.css
+++ b/src/main/java/com/googlecode/mgwt/ui/client/theme/ios7/css/header.css
@@ -14,13 +14,13 @@
 .mgwt-HeaderPanel-left {
 	position: absolute;
 	left:0px;
-	top: 0px;
+	bottom: 0px;
 }
 
 .mgwt-HeaderPanel-right {
 	position: absolute;
 	right:0px;
-	top: 0px;
+	bottom: 0px;
 }
 
 .mgwt-HeaderPanel-center {
